ready for deployment

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
+    <title>10 Seconds Math App</title>
 
     <link
       rel="stylesheet"
